--- a/src/screens/register.css
+++ b/src/screens/register.css
@@ -93,3 +93,149 @@ button  {
     width: 330px;
     margin-top: 2.5rem;
 }
+.img-mobile  {
+    display: none;
+}
+.imgRegister  {
+    display: none;
+}
+
+@media (max-width: 768px)  {
+    #redirectLogin {
+        cursor: pointer;
+    }
+    
+    section img {
+        display: none; 
+    }
+    .imgRegister  {
+        display: block;
+        height: 10rem;
+        width: 100%;
+    }
+    .imgRegister img {
+    display: block;
+    width: 100%;
+    height: 18rem;
+    object-fit: cover;
+    }
+    .logo svg  {
+        width: 5rem;
+        justify-content: center;
+        align-items: center;
+    }
+    section {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        overflow: hidden;
+        align-items: center;
+        background-color: #8258BD; 
+    }
+    
+    
+    .logo {
+        display: flex;
+        justify-content: center;
+        width:100% ;
+        margin-left: 15%;
+        margin-bottom: 0;
+        align-items: center;
+    }
+    
+    .information {
+        width: 100%;
+        text-align: center;
+        color: white;
+        justify-content: center;
+        margin-left: -9.5rem;
+        margin-top: 8rem;
+    }
+    
+    h3 {
+        font-family: "Istok Web", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+        font-size: 28px;
+        color: white;
+        margin: 0;
+    }
+    
+    p {
+        font-family: "Hind Guntur", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        color: white;
+        font-size: 14px;
+        margin: 0;
+        margin-bottom: 1rem;
+    }
+    
+    #login-color {
+        color: #4b1a62;
+    }
+    
+    .inputsValues {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.5rem;
+        margin-top: 1rem;
+        align-items: center;
+        margin-left: 5%;
+    }
+    
+    .inputsValues input {
+        width: 100%;
+        height: 40px;
+        border: none;
+        background: none;
+        border-bottom: 1px solid #ffffff;
+        padding: 5px;
+        outline: none;
+        color: white;
+    }
+    
+    input::placeholder {
+        color: white;
+        font-family: "Hind Guntur", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        font-size: 16px;
+    }
+    
+    button {
+        width: 200px;
+        height: 50px;
+        background-color: #652484;
+        font-size: 20px;
+        color: white;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        margin-top: 1rem;
+    }
+    
+    .userSign {
+        text-align: center;
+        margin-top: 0;
+    }
+    
+    .btn {
+        display: flex;
+        justify-content: center;
+    }
+    
+    #security {
+        font-family: "Hind Guntur", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        font-size: 12px;
+        color: rgba(255, 255, 255, 0.8);
+        width: 300px;
+        text-align: center;
+        margin-top: 1.5rem;
+        margin-left: 10%;
+    }
+    
+    
+}
